@@ -50,8 +50,8 @@
         <version.org.assertj>3.22.0</version.org.assertj>
         <version.org.awaitility>4.2.0</version.org.awaitility>
 
-        <version.org.optaplanner>8.22.1.Final</version.org.optaplanner>
-        <version.org.kie.kogito>1.22.1.Final</version.org.kie.kogito>
+        <version.org.optaplanner>8.30.0.Final</version.org.optaplanner>
+        <version.org.kie.kogito>1.30.0.Final</version.org.kie.kogito>
 
         <version.surefire.plugin>2.22.2</version.surefire.plugin> <!-- minimum required by JUnit 5 -->
         <version.shade.plugin>3.4.0</version.shade.plugin> <!-- minimum required by JUnit 5 -->
@@ -235,7 +235,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${version.surefire.plugin}</version>
                     <configuration>
-                        <argLine>-Xmx1024m -Dfile.encoding=UTF-8</argLine>
+                        <argLine>-Xmx2048m -Dfile.encoding=UTF-8 --add-opens java.base/java.nio=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
